# r3viewer

./: .gitignore  README.md  package-lock.json  package.json
src/: App.css  App.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs
src-tauri/src/database/: mod.rs  models.rs  schema.rs
src-tauri/src/services/: analysis_service.rs  auth_service.rs  docker_service.rs  github_service.rs  mod.rs  sheets_service.rs
src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Input.tsx  Loading.tsx  Modal.tsx  index.ts
src/styles/: globals.css
